# cmpe295-lumo

./: .gitignore  CLAUDE.md  PHASE1_COMPLETION.md  README.md  docker-compose.yml  readMeAA.md
backend/: README.md  package-lock.json  pyproject.toml  test_feedback_integration.py
backend/app/: __init__.py  main.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: analytics.py  auth.py  diagnostics.py  evaluation.py  feedback.py  lesson_generator.py  lessons.py  mock_quiz.py  quizzes.py  sessions.py
backend/app/core/: config.py  database.py  deps.py
backend/app/models/: __init__.py  attention.py  auth.py  events.py  lesson.py  session.py  subject.py
backend/app/schemas/: analytics.py  auth.py  feedback.py  interactive.py  lesson.py  sessions.py
backend/app/seed/: lesson_data.py  seed_db.py
backend/app/services/: __init__.py  accessibility_checker.py  attention_engine.py  attention_peaks.py  auth_service.py  diagnostic_service.py  feedback_agent.py  gemini_service.py  mdx_renderer.py  socratic_hint_generator.py  subject_service.py  tone_guardrails.py
backend/app/services/generation/: base.py  bkt_strategy.py  context_builder.py  hybrid_strategy.py  misconception_strategy.py  registry.py  zpd_strategy.py
backend/evaluation/: rubrics.py  run_eval.py
backend/tests/: conftest.py  test_accessibility_checker.py  test_analytics_api.py  test_attention_engine.py  test_attention_peaks.py  test_interactive.py  test_lessons_api.py  test_mdx_renderer.py
database/init/: 01-schema.sql  02-auth-subjects.sql
docs/: ATTENTION_ANALYTICS_PLAN.md  DIAGRAMS.md  LESSON_DESIGNER_TECHNICAL_REPORT.md  PRIVACY_GUARDRAILS.md  README.md  SETUP_GUIDE.md  api_contracts.yaml  event_schema.json
experimental/: README.md
frontend/: README.md  middleware.ts  next.config.js  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AgentPanel.tsx  DashboardContent.tsx
frontend/e2e/: E2E_TEST_REPORT.md  accessibility.spec.ts  activities-basic.spec.ts  activities-drag.spec.ts  activities-special.spec.ts  analytics.spec.ts  auth.spec.ts  editor.spec.ts  error-states.spec.ts  home.spec.ts  learn.spec.ts  lesson-quiz.spec.ts  lesson-viewer.spec.ts  lessons-browse.spec.ts  route-protection.spec.ts  students.spec.ts
frontend/lib/: api.ts  types.ts
(+48 files in other folders)
